add Event and Category controllers to API, add file export service

--- a/GloboTicket.TicketManagement.Api/appsettings.json
+++ b/GloboTicket.TicketManagement.Api/appsettings.json
@@ -3,9 +3,9 @@
     "GloboTicketTicketManagementConnectionString": "Server=localhost,1433;Database=GloboTicket;User Id=sa;Password=s3cret-Ninja;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
   "EmailSettings": {
-    "FromAddress": "gill@techorama.nl",
-    "ApiKey": "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",
-    "FromName": "Gill"
+    "FromAddress": "admin@example.com",
+    "ApiKey": "api key",
+    "FromName": "Admin"
   },
   "Logging": {
     "LogLevel": {
