--- a/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
+++ b/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
@@ -13,10 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.16">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
